# M3DC1

./: .gitignore  CMakeLists.txt  Darwin-i386.mk  Linux-ia64.mk  Linux-x86_64.mk  M3Dmodules.f90  PETScInterface.c  PETScInterface.cpp  README  acbauer.F  adapt.f90  auto-check.sh  auto-run.sh  auxiliary_fields.f90  basic_mesh.f90  biharmonic.f90  bint.mk  bootstrap.f90  boundary.f90  carl.mk  coils.f90  control.f90  cori.mk  cori_knl.mk  diagnostics.f90  edison.mk  electric_field.f90  electrostatic_potential.f90  element.f90  error_estimate.f90  errorcalc.F  fftw_fortran.c  field.f90  fin.F  fit_magnetics.f90  get_pc_skip_count.f90  gradshafranov.f90  gread_restart_c11.fh  gread_restart_c12_cplx.fh  greene.pppl.gov.mk  (+94 more)
m3dc1_scorec/: CMakeLists.txt  README  kairos-cplx.sh  kairos.sh  omega-intel2020-config.sh  readme
m3dc1_scorec/api/: m3dc1_scorec.cc  m3dc1_scorec.h  name_convert.h
m3dc1_scorec/cmake/: FindHdf5.cmake  FindPETSc.cmake  FindPetsc.cmake  FindScorec.cmake  FindSimmetrix.cmake  cori-FindTrilinos.cmake
m3dc1_scorec/config-files/: avatar-mpich3-config.sh  avatar-opempi-config.sh  centos7-config.sh  centos7-pumi-config.sh  centos7-real-config.sh  config.sh  core-edison-config.sh  core-openmpi-gcc4.4.5-config.sh  core-perlmutter-mpich8.1.12.sh  core-portal-openmpi-4.0.1-config.sh  core-sim-openmpi-gcc4.4.5-config.sh  cori-config.sh  cori-cuda10.1-pgi19.7-config.sh  cori-cuda10.2-pgi19.10-config.sh  cori-gpu-pgi-mvapich-cplx-config.h  cori-gpu-pgi-mvapich-real-config.h  cori-haswell-intel-craympich-cplx-config.h  cori-haswell-intel-craympich-real-config.h  cori-knl-intel-craympich-cplx-config.h  cori-knl-intel-craympich-real-config.h  cori-mpich7.4.4-haswell-real-config.sh  cori-mpich7.4.4-knl-real-config.sh  cori-mpich7.6.0-haswell-complex-config.sh  cori-mpich7.6.0-haswell-real-config.sh  cori-mpich7.6.0-haswell-trilinos-config.sh  cori-mpich7.6.0-knl-complex-config.sh  cori-mpich7.6.0-knl-real-config.sh  cori-mpich7.6.0-knl-trilinos-config.sh  cori-mpich7.6.2-haswell-real-config.sh  cori-mpich7.6.2-knl-real-config.sh  cori-mpich7.7.3-hsw-real-config.sh  cori-mpich7.7.6-hsw-real-config.sh  cori_knl-config.sh  eddy-real-config.sh  edison-mpich7.6.0-complex-config.sh  edison-mpich7.6.0-real-config.sh  edison-mpich7.6.0-trilinos-config.sh  marconi-config.sh  marconi_scorec-config-cplx.sh  mit-FindSimModSuite.cmake  (+49 more)
m3dc1_scorec/doc/: m3dc1-scorec-api.tex  m3dc1-scorec.tex
m3dc1_scorec/include/: BSpline.h  CMODGeoExpression.h  Expression.h  PolyNomial.h  ReducedQuintic.h  ReducedQuinticExplicit.h  ReducedQuinticImplicit.h  m3dc1_field.h  m3dc1_matrix.h  m3dc1_mesh.h  m3dc1_model.h  m3dc1_numbering.h  m3dc1_sizeField.h  m3dc1_slnTransfer.h  slntransferUtil.h
m3dc1_scorec/src/: BSpline.cc  CMODGeoExpression.cc  Expression.cc  PolyNomial.cc  ReducedQuinticExplicit.cc  ReducedQuinticImplicit.cc  m3dc1_adapt.cc  m3dc1_entity.cc  m3dc1_field.cc  m3dc1_matrix.cc  m3dc1_matrix.cc.callback  m3dc1_matrix_allocate.cc  m3dc1_matrix_allocate.h  m3dc1_mesh.cc  m3dc1_model.cc  m3dc1_numbering.cc  m3dc1_numbering.h  m3dc1_sizeField.cc  m3dc1_slnTransfer.cc  slntransferUtil.cc
unstructured/: AIX-powerpc.mk  CMakeLists.txt  Darwin-i386.mk  LICENSE  Linux-ia64.mk  Linux-x86_64.mk  Linux-x86_64.mk.pathscale  M3Dmodules.f90  NN_params.inc  PETScInterface.c  PETScInterface.cpp  a2cc.f90  acbauer.F  adapt.f90  adas_m3dc1.f90  ascent.mk  ascent_gcc.mk  auxiliary_fields.f90  aws.mk  basic_mesh.f90  biharmonic.f90  bint.mk  bootstrap.f90  bootstrap_addedCoeffCalc.f90  bootstrap_working.f90  boundary.f90  carl.mk  centos7.mk  check_intx.sh  coil_sets.f90  coils.f90  compare.F  compare.f90  control.f90  cori.mk  cori_gpu.mk  cori_gpu_pgi.mk  cori_knl.mk  dbesj0.f  diagnostics.f90  (+178 more)
unstructured/DATA/: GSC1input  tiltC1input
unstructured/README/: README  readme.ascent  readme.centos7  readme.collapse  readme.cori  readme.corigpu  readme.doc  readme.eddy  readme.edison  readme.flux  readme.greene  readme.hecate  readme.hopper  readme.hydra  readme.kairos  readme.marconi  readme.mit  readme.perlmutter  readme.perlmutter-gnu  readme.perlmutter_cpu  readme.perlmutter_gpu  readme.perlmutter_nvidia  readme.perseus  readme.perseusamd  readme.portal.openmpi-1.10.3  readme.portal.openmpi-1.8.4  readme.portal.openmpi-3.0.0  readme.portal.openmpi-4.0.1  readme.portal.openmpi-4.0.3  readme.portalr6  readme.saturn  readme.scorec  readme.sdumont  readme.spark  readme.stellar  readme.stellar-intelmpi  readme.stellar-openmpi  readme.stellar_mg  readme.traverse  readme.traverse-nvhpc
unstructured/cmake/: FindScorec.cmake  scorec.cmake
unstructured/doc/: Makefile  SCORECdoc.tex  building.tex  doc.fdb_latexmk  doc.fls  doc.tex  m3dc1.xml  m3dc1_cplx.xml  mesh_adapt.tex  mesh_gen.tex  options_bjacobi  options_ilu_gmres  options_ilu_superlu_gmres  options_superlu  options_superlu_gmres  partitioned_mesh.eps  partitioned_mesh.fig  petsc_option.tex
unstructured/idl/: a_bracket.pro  addnew.sh  addnew.sh~  analytic_model.pro  c1view.pro  check_bc.pro  chi95.pro  chirikov.pro  clamp_and_shift.pro  compensate_renorm.pro  continuity.pro  contour_and_legend.pro  contour_and_legend_single.pro  convert_bialek.pro  convert_units.pro  cp_field.pro  create_map.pro  ct2.pro  ct3.pro  cumtrapz.pro  delstar.pro  delta_w.pro  dimensions.pro  dx.pro  dz.pro  efit_read.pro  energy.pro  energy_conservation.pro  eqn_gradshafranov.pro  eqn_momentum_y.pro  eqn_momentum_z.pro  equations.pro  eval.pro  eval_field.pro  eval_on_boundary.pro  expfit.pro  extract_boundary.pro  field_at_flux.pro  field_at_point.pro  field_data.pro  (+110 more)
unstructured/modules/: m3dc1.module  pppl-centos7
unstructured/python/: M3D-C1_units.txt  README  eval_field.py  plot_diagnostics.py  plot_field.py  plot_field_mesh.py  plot_line.py  plot_mesh.py  plot_time_trace.py  plotfpy.py  setup.py  unit_conv.py
unstructured/regtest/: CHANGELOG  README  auto-check.sh  auto-run.sh  check  clean  compare.py  config-centos7  makefile  run
unstructured/sbin/: create_fixed_mesh.sh  create_fixed_mesh.sunfire.r6.sh  create_mesh.sh  extract_profiles.sh  m3dc1_units.sh  (+1 more)
(+1308 files in other folders)
